Fix dark mode for skarabrae and wayfarers

--- a/src/css/games/skarabrae.less
+++ b/src/css/games/skarabrae.less
@@ -35,7 +35,7 @@ html[data-theme=dark].bgaext_dark {
 	}
 }
 
-htmlhtml[data-theme=dark].bgaext_dark[data-theme=dark] {
+html[data-theme=dark].bgaext_dark[data-theme=dark] {
 
 	.miniboard .counter,
 	.miniboard .tracker,
